[metadata]
name = pytoggle
author = Victor Timohin
author-email = vvt@opsguru.io
summary = PyToggl Toggl API Library
description-file = README
home-page = http://github.com/ops-guru/pytoggle
license = MIT
requires = 
    iso8601
    requests

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    pytoggle

[files]
packages =
    pytoggle
